--- a/index.html
+++ b/index.html
@@ -574,7 +574,8 @@ function initGoogleAuth() {
           await initSheets();
           await syncFromSheets();
           setSyncStatus('connected','синхронизировано');
-          showToast('✅ Google Sheets подключён', 2000);
+          renderPeriod();
+          renderKopilka();
         } catch(e) {
           setSyncStatus('error','ошибка');
           showToast('❌ ' + (e.message || 'Ошибка синхронизации'));
@@ -1180,22 +1181,22 @@ function renderSettings(){
 
 function renderAuthCard(){
   const el=document.getElementById('auth-card-content');
+  if(!el) return;
   if(gAccessToken&&gUserEmail){
     el.innerHTML=`
       <div class="auth-status-row">
-        <div>
-          <div class="set-row-lbl">✅ Подключено</div>
-          <div class="auth-sub">${gUserEmail}</div>
-        </div>
+        <div><div class="set-row-lbl">✅ Подключено</div><div class="auth-sub">${gUserEmail}</div></div>
       </div>
       <div class="auth-status-row">
-        <div>
-          <div class="set-row-lbl">Таблица</div>
-          <div class="auth-sub">Мои траты 2025</div>
-        </div>
+        <div><div class="set-row-lbl">Таблица</div><div class="auth-sub">Мои траты 2025</div></div>
         <a href="https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}" target="_blank" style="font-size:12px;color:var(--violet);font-weight:700;text-decoration:none">Открыть →</a>
       </div>
       <button class="auth-btn disconnect" style="margin-top:14px" onclick="signOut()">Отключить Google аккаунт</button>`;
+  } else if(gUserEmail && !gAccessToken) {
+    // Email known but token not yet restored — show loading
+    el.innerHTML=`
+      <div class="set-row-lbl" style="margin-bottom:6px">🔄 Восстановление сессии...</div>
+      <div class="auth-sub" style="font-size:13px;color:var(--ink-muted)">${gUserEmail}</div>`;
   } else {
     el.innerHTML=`
       <div class="set-row-lbl" style="margin-bottom:6px">Синхронизация</div>
@@ -1204,19 +1205,6 @@ function renderAuthCard(){
   }
 }
 
-function updateSalaryPreview(){
-  const sal=parseFloat(document.getElementById('salary-input').value)||150000;
-  const rows=genSalaryPreview(sal);
-  document.getElementById('sal-preview').innerHTML='<div class="sal-preview-title">Расчёт ближайших периодов</div>'+
-    rows.map(r=>`<div class="sal-row"><span class="sal-row-lbl">${r.label}</span><span class="sal-row-val" style="color:${r.note==='avans'?'var(--violet)':'var(--green)'}">${fmt(r.val)}</span></div>`).join('');
-}
-document.getElementById('salary-input').addEventListener('input',updateSalaryPreview);
-
-function saveSalary(){
-  const s=parseFloat(document.getElementById('salary-input').value);
-  if(isNaN(s)||s<=0){showToast('⚠️ Некорректный оклад');return;}
-  state.salary=s;saveState();showToast('✅ Оклад сохранён — '+fmt(s));
-}
 
 // ═══════════════════════════════════════════
 // BASE PAYMENTS
